[gd_scene load_steps=22 format=3 uid="uid://dweew8gk544wh"]

[ext_resource type="Texture2D" uid="uid://b7dujjcifq5lf" path="res://Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="1_0lak4"]
[ext_resource type="Script" uid="uid://hfbogrv8dog7" path="res://enemy/skeleton/skeleton.gd" id="1_2idp0"]
[ext_resource type="Texture2D" uid="uid://frsv5wemcx0f" path="res://Monsters_Creatures_Fantasy/Skeleton/Death.png" id="1_ty7q4"]
[ext_resource type="Texture2D" uid="uid://byl4isr7pnp32" path="res://Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="3_2idp0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cridm"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fqi38"]
atlas = ExtResource("1_ty7q4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4en7e"]
atlas = ExtResource("1_ty7q4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg30q"]
atlas = ExtResource("1_ty7q4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eisf7"]
atlas = ExtResource("1_ty7q4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty7q4"]
atlas = ExtResource("1_0lak4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2idp0"]
atlas = ExtResource("1_0lak4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15jv"]
atlas = ExtResource("1_0lak4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0wdl"]
atlas = ExtResource("1_0lak4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgen5"]
atlas = ExtResource("3_2idp0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyheg"]
atlas = ExtResource("3_2idp0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a38f"]
atlas = ExtResource("3_2idp0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aabbb"]
atlas = ExtResource("3_2idp0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqi38"]
animations = [{
"frames": [],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqi38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4en7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg30q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eisf7")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty7q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2idp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0wdl")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgen5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a38f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aabbb")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v15jv"]
radius = 140.228

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2idp0"]
size = Vector2(10, 3.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v15jv"]
size = Vector2(18, 3.25)

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_2idp0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cridm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.573333, 0.573333)
sprite_frames = SubResource("SpriteFrames_fqi38")
animation = &"Death"
autoplay = "Idle"
frame = 3
frame_progress = 1.0

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_v15jv")

[node name="DetectorDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorDeath"]
position = Vector2(0, -14.375)
shape = SubResource("RectangleShape2D_2idp0")

[node name="DetectorDeath2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorDeath2"]
shape = SubResource("RectangleShape2D_v15jv")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="DetectorDeath" to="." method="_on_detector_death_body_entered"]
[connection signal="body_entered" from="DetectorDeath2" to="." method="_on_detector_death_2_body_entered"]
